# critic

./: CMakeLists.txt  CMakePresets.json
critic/test/: CMakeLists.txt
critic/test/CriticTestObjects/: CMakeLists.txt  LiteAssnTestData.cc  LiteAssnTestData.h  LitePtrTestProduct.cc  LitePtrTestProduct.h  ToyProducts.h  classes.h  classes_def.xml
critic/test/ROOT-10870/: CMakeLists.txt  DataObj.cc  DataObj.h  Exception.cc  Handle.h  art_Exception.cc  cet_exception.h  classes.h  coded_exception.h
critic/test/ROOT-10870/Modules/: ArtDictionary.cmake
critic/test/art/: AddIntsProducer_module.cc  AssnsAnalyzer_module.cc  AssnsMultipleProduces_module.cc  AssnsProducer_module.cc  AssnsWrongPut_module.cc  BareStringAnalyzer_module.cc  BareStringProducer_module.cc  BlockingPrescaler_t-ref.txt  CMakeLists.txt  CheckPathResults_module.cc  CompressedIntProducer_module.cc  CompressedIntTestAnalyzer_module.cc  ConcurrentEngineRetrieval_module.cc  DefaultEngineTester_module.cc  DeferredIsReadyWithAssnsAnalyzer_module.cc  DeferredIsReadyWithAssnsProducer_module.cc  DerivedPtrVectorAnalyzer_module.cc  DerivedPtrVectorProducer_module.cc  DifferentHistoriesAnalyzer_module.cc  DoubleProducer_module.cc  DoubleTestAnalyzer_module.cc  DropTestAnalyzer_module.cc  DropTestParentageFaker_module.cc  EmptyPSetRegistryChecker_module.cc  EnsureNoModulesAtEndOfJob.h  EnsureNoModulesAtEndOfJob_service.cc  EventIDFilterChecker_module.cc  FailingAnalyzer_module.cc  FailingProducer_module.cc  FindManySpeedTestAnalyzer_module.cc  FindManySpeedTestProducer_module.cc  FlushingGeneratorTestFilter_module.cc  FlushingGeneratorTest_module.cc  FlushingGenerator_source.cc  GeneratorTest_source.cc  GenericOneSimpleProductAnalyzer.h  ImplicitRSAssignmentAnalyzer_module.cc  ImplicitRSAssignmentProducer_module.cc  IntProducer_module.cc  IntReaderThenProducer_module.cc  (+82 more)
critic/test/art/assns-iter/: AssnsIterProducer1_module.cc  AssnsIterProducer2_module.cc  CMakeLists.txt  ConstAssnsIterAnalyzer_module.cc
critic/test/art/assns-reader/: AssnsReaderTest_module.cc  CMakeLists.txt
critic/test/art/event-processor/: CMakeLists.txt  DoNothingInput_source.cc  ThrowAfterConfig.h  ThrowingAnalyzer_module.cc  ThrowingProducer_module.cc  graceful_shutdown_from_exception_t-ref.txt  graceful_shutdown_t.sh
critic/test/art/event-processor/fcl/: test_01.fcl  test_02.fcl  test_graceful_shutdown.fcl  throws_with_module_info_t.fcl
critic/test/art/event-shape/: CMakeLists.txt  ESAnalyzer_module.cc  ESPrimaryProducer_module.cc  ESSecondaryProducer_module.cc  FailEverything_module.cc  InputProducerNoEvents_module.cc  InputProducerOnlyEvents_module.cc  InputProducer_module.cc  PassEverything_module.cc
critic/test/art/exception-handling/fcl/: skip_event_t.fcl
critic/test/art/fcl/: MissingModuleType_t2.fcl  SelectEventsFromPreviousProcess_t.fcl  SelectEventsFromPreviousProcess_w.fcl  SimpleSource_t_02.fcl  cmdLineTmpDir.fcl  exception_multiple_paths_t1.fcl  exception_multiple_paths_t2.fcl  outputCommand_r.fcl
critic/test/art/high-memory/: CMakeLists.txt  HMLargeData.h  HMRunProdProducer_module.cc  HMSubRunProdProducer_module.cc  TestRemoveCachedProduct_module.cc
critic/test/art/kitchen-sink/: CMakeLists.txt  TestReadImmediateControl_module.cc
critic/test/art/kitchen-sink/fcl/: ProductPtr_r.fcl  ProductPtr_w.fcl
critic/test/art/output-file-handling/: BigProductProducer_module.cc  CMakeLists.txt  SwitchOnFileSizeMax-ref.txt  switch_on_file_size_max_r.cxx
critic/test/art/producing-services/: CMakeLists.txt  IntProducingService_service.cc  LastDoubleProducingService_service.cc  NumProdServiceInterface.h
critic/test/art/product-aggregation/full-run-products/: CMakeLists.txt
critic/test/art/product-aggregation/physics-workflow/: AssembleMoreProductsRobust_module.cc  AssembleMoreProducts_module.cc  AssembleProducts_module.cc  CMakeLists.txt  CalibConstants.h  CheckMoreProducts_module.cc  CheckProducts_module.cc  EventGenerator_module.cc  ParticleSimulator_module.cc  Reconstruction_module.cc  TaggedValue.h  TrackEfficiency.h
critic/test/art/product-aggregation/summed-values/: CMakeLists.txt  SummedValueAcrossRuns_module.cc
critic/test/art/product-mixing/: CMakeLists.txt  MixAnalyzer_module.cc  MixFilterTestETS_module.cc  MixFilterTestETSc_module.cc  MixFilterTestImpl_module.cc.in  MixFilterTestNoStartEvent_module.cc  MixFilterTest_module.cc  MixProducer_module.cc
critic/test/art/product-mixing/fcl/: ProductMix_r1.fcl  (+9 more)
critic/test/art/ptr-maker/: CMakeLists.txt  PtrMakerAnalyzer_module.cc  PtrMakerProducer2_module.cc  PtrMakerProducer_module.cc
critic/test/art/ptr-vector/: CMakeLists.txt  PtrVectorAnalyzer_module.cc  PtrVectorProducer_module.cc
critic/test/art/random-numbers/: CMakeLists.txt
critic/test/art/range-algorithms/: AssnsAnalyzerFEG_module.cc  AssnsProducer1_module.cc  AssnsProducer2_module.cc  CMakeLists.txt
critic/test/art/range-sets/: CMakeLists.txt
critic/test/art/results-products/: CMakeLists.txt  RPTestReader_plugin.cc  RPTest_plugin.cc
critic/test/art/sam-metadata/: SAM_metadataFromInput_01_verify-ref.txt  SAM_metadataFromInput_02_verify-ref.txt  SAM_metadataFromInput_03_verify-ref.txt  SAM_metadata_verify_JSON-ref.txt  SAM_metadata_verify_hr-ref.txt
critic/test/art/sampling-input/: CMakeLists.txt  SamplingAnalyzer_module.cc  module.modulemap
critic/test/art/seek-to-event/: CMakeLists.txt  SeekToEventClient.h  SeekToEventClient_service.cc
critic/test/art/toy-raw-input/: CMakeLists.txt  ToyRawFileInput_source.cc  ToyRawInputTester_module.cc  ToyRawInput_source.cc  ToySource.cc  ToySource.h
critic/test/gallery/: CMakeLists.txt  CriticFailEverything_module.cc  GalleryAssnsProducer_module.cc  GalleryPtrTestProducer_module.cc  GalleryTestProducer_module.cc  TestFindOne.h  findOne_1_t.cc  findOne_2_t.cc  findOne_3_t.cc  gallery_empty_file_t.cc  gallery_random_io_t.cc  gallery_t.C  gallery_t.cc  gallery_t.py
critic/test/gallery/fcl/: CriticAssns_w.fcl  test_gallery_makeInput1.fcl  test_gallery_makeInput2.fcl  test_gallery_makeInput5.fcl  test_gallery_makeInput7.fcl  test_gallery_makeInput8.fcl
(+68 files in other folders)
